CSS fix for higher popup z-index

--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 // DD photo dialog and stuff...
-.popped{max-width: 90%;max-height:90%;display:block;position:fixed; background-repeat: no-repeat; background-attachment: local; overflow: auto; z-index:200; left:0; right:0; top:0; bottom:0; margin: auto;}
+.popped{max-width: 90%;max-height:90%;display:block;position:fixed; background-repeat: no-repeat; background-attachment: local; overflow: auto; z-index:2000; left:0; right:0; top:0; bottom:0; margin: auto;}
 #popoff{background-color: transparent; width: 100%; height:auto;; cursor:pointer;}
 .popped:hover #popup_caption{opacity: 0.0;}
 #popup_caption{
