--- a/app/assets/stylesheets/themes/bannerette-2col-1col/base.css.scss
+++ b/app/assets/stylesheets/themes/bannerette-2col-1col/base.css.scss
@@ -663,7 +663,7 @@ h1 a:hover, h2 a:hover, h3 a:hover{ text-decoration: underline;}
 }
 
 .locale img{
-  margin-top: -6px;
+  margin-top: -2px;
 }
 
 /* Custom menu icons */
